// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`@carbon/motion public API JavaScript exports 1`] = `
[
  "defineMotionSurface: [Function]",
  "describeSurface: [Function]",
  "durationFast01: "70ms"",
  "durationFast02: "110ms"",
  "durationModerate01: "150ms"",
  "durationModerate02: "240ms"",
  "durationSlow01: "400ms"",
  "durationSlow02: "700ms"",
  "easings.standard.productive: "cubic-bezier(0.2, 0, 0.38, 0.9)"",
  "easings.standard.expressive: "cubic-bezier(0.4, 0.14, 0.3, 1)"",
  "easings.entrance.productive: "cubic-bezier(0, 0, 0.38, 0.9)"",
  "easings.entrance.expressive: "cubic-bezier(0, 0, 0.3, 1)"",
  "easings.exit.productive: "cubic-bezier(0.2, 0, 1, 0.9)"",
  "easings.exit.expressive: "cubic-bezier(0.4, 0.14, 1, 1)"",
  "fast01: "70ms"",
  "fast02: "110ms"",
  "getMotionSurface: [Function]",
  "moderate01: "150ms"",
  "moderate02: "240ms"",
  "motion: [Function]",
  "resolveDuration: [Function]",
  "resolveEasing: [Function]",
  "slow01: "400ms"",
  "slow02: "700ms"",
  "surfaces.disclosure.kind: "reveal"",
  "surfaces.disclosure.duration: "moderate-01"",
  "surfaces.disclosure.enter.blockSize: "auto"",
  "surfaces.disclosure.enter.opacity: 1",
  "surfaces.disclosure.exit.blockSize: 0",
  "surfaces.disclosure.exit.opacity: 0",
  "surfaces.disclosure.enterEasing.name: "entrance"",
  "surfaces.disclosure.enterEasing.mode: "productive"",
  "surfaces.disclosure.exitEasing.name: "exit"",
  "surfaces.disclosure.exitEasing.mode: "productive"",
  "surfaces.contextual.kind: "reveal"",
  "surfaces.contextual.duration: "fast-02"",
  "surfaces.contextual.enter.opacity: 1",
  "surfaces.contextual.enter.transform: "scale(1)"",
  "surfaces.contextual.exit.opacity: 0",
  "surfaces.contextual.exit.transform: "scale(0.96)"",
  "surfaces.contextual.enterEasing.name: "entrance"",
  "surfaces.contextual.enterEasing.mode: "expressive"",
  "surfaces.contextual.exitEasing.name: "exit"",
  "surfaces.contextual.exitEasing.mode: "expressive"",
  "surfaces.expand.kind: "shared-element"",
  "surfaces.expand.duration: "moderate-02"",
  "surfaces.expand.enter.opacity: 1",
  "surfaces.expand.enter.transform: "scale(1)"",
  "surfaces.expand.exit.opacity: 0",
  "surfaces.expand.exit.transform: "scale(0.96)"",
  "surfaces.expand.enterEasing.name: "standard"",
  "surfaces.expand.enterEasing.mode: "productive"",
  "surfaces.expand.exitEasing.name: "standard"",
  "surfaces.expand.exitEasing.mode: "productive"",
  "surfaces.invoke.kind: "shared-element"",
  "surfaces.invoke.origin: "trigger"",
  "surfaces.invoke.duration: "moderate-02"",
  "surfaces.invoke.enterEasing.name: "standard"",
  "surfaces.invoke.enterEasing.mode: "expressive"",
  "surfaces.invoke.exitEasing.name: "standard"",
  "surfaces.invoke.exitEasing.mode: "expressive"",
  "unstable_tokens.0: "durationFast01"",
  "unstable_tokens.1: "durationFast02"",
  "unstable_tokens.2: "durationModerate01"",
  "unstable_tokens.3: "durationModerate02"",
  "unstable_tokens.4: "durationSlow01"",
  "unstable_tokens.5: "durationSlow02"",
  "unstable_tokens.6: "fast01"",
  "unstable_tokens.7: "fast02"",
  "unstable_tokens.8: "moderate01"",
  "unstable_tokens.9: "moderate02"",
  "unstable_tokens.10: "slow01"",
  "unstable_tokens.11: "slow02"",
]
`;

exports[`@carbon/motion public API Sass module index 1`] = `
[
  "$easings.standard.productive: cubic-bezier(0.2, 0, 0.38, 0.9)",
  "$easings.standard.expressive: cubic-bezier(0.4, 0.14, 0.3, 1)",
  "$easings.entrance.productive: cubic-bezier(0, 0, 0.38, 0.9)",
  "$easings.entrance.expressive: cubic-bezier(0, 0, 0.3, 1)",
  "$easings.exit.productive: cubic-bezier(0.2, 0, 1, 0.9)",
  "$easings.exit.expressive: cubic-bezier(0.4, 0.14, 1, 1)",
  "$duration-fast-01: 70ms",
  "$duration-fast-02: 110ms",
  "$duration-moderate-01: 150ms",
  "$duration-moderate-02: 240ms",
  "$duration-slow-01: 400ms",
  "$duration-slow-02: 700ms",
  "$fast-01: 70ms",
  "$fast-02: 110ms",
  "$moderate-01: 150ms",
  "$moderate-02: 240ms",
  "$slow-01: 400ms",
  "$slow-02: 700ms",
  "$surfaces.disclosure.kind: "reveal"",
  "$surfaces.disclosure.duration: "moderate-01"",
  "$surfaces.disclosure.enter.block-size: "auto"",
  "$surfaces.disclosure.enter.opacity: 1",
  "$surfaces.disclosure.exit.block-size: 0",
  "$surfaces.disclosure.exit.opacity: 0",
  "$surfaces.disclosure.enter-easing.name: "entrance"",
  "$surfaces.disclosure.enter-easing.mode: "productive"",
  "$surfaces.disclosure.exit-easing.name: "exit"",
  "$surfaces.disclosure.exit-easing.mode: "productive"",
  "$surfaces.contextual.kind: "reveal"",
  "$surfaces.contextual.duration: "fast-02"",
  "$surfaces.contextual.enter.opacity: 1",
  "$surfaces.contextual.enter.transform: "scale(1)"",
  "$surfaces.contextual.exit.opacity: 0",
  "$surfaces.contextual.exit.transform: "scale(0.96)"",
  "$surfaces.contextual.enter-easing.name: "entrance"",
  "$surfaces.contextual.enter-easing.mode: "expressive"",
  "$surfaces.contextual.exit-easing.name: "exit"",
  "$surfaces.contextual.exit-easing.mode: "expressive"",
  "$surfaces.expand.kind: "shared-element"",
  "$surfaces.expand.duration: "moderate-02"",
  "$surfaces.expand.enter.opacity: 1",
  "$surfaces.expand.enter.transform: "scale(1)"",
  "$surfaces.expand.exit.opacity: 0",
  "$surfaces.expand.exit.transform: "scale(0.96)"",
  "$surfaces.expand.enter-easing.name: "standard"",
  "$surfaces.expand.enter-easing.mode: "productive"",
  "$surfaces.expand.exit-easing.name: "standard"",
  "$surfaces.expand.exit-easing.mode: "productive"",
  "$surfaces.invoke.kind: "shared-element"",
  "$surfaces.invoke.origin: "trigger"",
  "$surfaces.invoke.duration: "moderate-02"",
  "$surfaces.invoke.enter-easing.name: "standard"",
  "$surfaces.invoke.enter-easing.mode: "expressive"",
  "$surfaces.invoke.exit-easing.name: "standard"",
  "$surfaces.invoke.exit-easing.mode: "expressive"",
  "@function motion",
  "@function surface",
  "@mixin motion",
  "@mixin surface",
]
`;

exports[`@carbon/motion public API published files 1`] = `
[
  "README.md",
  "docs/sass.md",
  "docs/surfaces.md",
  "es/index.js",
  "index.scss",
  "js/generated/surfaces.d.ts",
  "js/generated/surfaces.js",
  "js/generated/tokens.d.ts",
  "js/generated/tokens.js",
  "lib/index.d.ts",
  "lib/index.js",
  "lib/surfaces.d.ts",
  "lib/tokens.d.ts",
  "package.json",
  "scss/generated/_surfaces.scss",
  "scss/generated/_tokens.scss",
  "src/dtcg/motion.json",
  "src/dtcg/surfaces.json",
  "src/index.ts",
  "src/surfaces.ts",
  "src/tokens.ts",
  "style-dictionary/formats/js-surfaces.js",
  "style-dictionary/formats/js-tokens.js",
  "style-dictionary/formats/scss-surfaces.js",
  "style-dictionary/formats/scss-tokens.js",
  "style-dictionary/sd.config.js",
  "style-dictionary/transforms/cubic-bezier.js",
  "style-dictionary/transforms/duration.js",
  "style-dictionary/utils/dts-type-literal.js",
  "telemetry.yml",
  "tsconfig.json",
  "tsconfig.types.json",
  "umd/index.js",
]
`;

exports[`@carbon/motion public API type declarations 1`] = `
[
  "durationFast01: string",
  "durationFast02: string",
  "durationModerate01: string",
  "durationModerate02: string",
  "durationSlow01: string",
  "durationSlow02: string",
  "fast01: string",
  "fast02: string",
  "moderate01: string",
  "moderate02: string",
  "slow01: string",
  "slow02: string",
  "easings.standard.productive: string",
  "easings.standard.expressive: string",
  "easings.entrance: [Same as easings.standard]",
  "easings.exit: [Same as easings.standard]",
  "unstable_tokens: readonly string[]",
  "type DurationName = DurationName",
  "type EasingName = EasingName",
  "type EasingMode = EasingMode",
  "type CubicBezier = CubicBezier",
  "type EasingMap = EasingMap",
  "motion: (name: EasingName, mode: EasingMode) => string",
  "resolveEasing: (name: EasingName, mode: EasingMode) => CubicBezier",
  "resolveDuration: (name: DurationName) => string",
  "getMotionSurface: (surface: MotionSurfaceInput) => MotionSurfaceDefinition",
  "surfaces.disclosure.kind: "reveal"",
  "surfaces.disclosure.duration: "moderate-01"",
  "surfaces.disclosure.enter.blockSize: "auto"",
  "surfaces.disclosure.enter.opacity: 1",
  "surfaces.disclosure.exit.blockSize: 0",
  "surfaces.disclosure.exit.opacity: 0",
  "surfaces.disclosure.enterEasing.name: "entrance"",
  "surfaces.disclosure.enterEasing.mode: "productive"",
  "surfaces.disclosure.exitEasing.name: "exit"",
  "surfaces.disclosure.exitEasing.mode: "productive"",
  "surfaces.contextual.kind: "reveal"",
  "surfaces.contextual.duration: "fast-02"",
  "surfaces.contextual.enter.opacity: 1",
  "surfaces.contextual.enter.transform: "scale(1)"",
  "surfaces.contextual.exit.opacity: 0",
  "surfaces.contextual.exit.transform: "scale(0.96)"",
  "surfaces.contextual.enterEasing.name: "entrance"",
  "surfaces.contextual.enterEasing.mode: "expressive"",
  "surfaces.contextual.exitEasing.name: "exit"",
  "surfaces.contextual.exitEasing.mode: "expressive"",
  "surfaces.expand.kind: "shared-element"",
  "surfaces.expand.duration: "moderate-02"",
  "surfaces.expand.enter.opacity: 1",
  "surfaces.expand.enter.transform: "scale(1)"",
  "surfaces.expand.exit.opacity: 0",
  "surfaces.expand.exit.transform: "scale(0.96)"",
  "surfaces.expand.enterEasing.name: "standard"",
  "surfaces.expand.enterEasing.mode: "productive"",
  "surfaces.expand.exitEasing.name: "standard"",
  "surfaces.expand.exitEasing.mode: "productive"",
  "surfaces.invoke.kind: "shared-element"",
  "surfaces.invoke.origin: "trigger"",
  "surfaces.invoke.duration: "moderate-02"",
  "surfaces.invoke.enterEasing.name: "standard"",
  "surfaces.invoke.enterEasing.mode: "expressive"",
  "surfaces.invoke.exitEasing.name: "standard"",
  "surfaces.invoke.exitEasing.mode: "expressive"",
  "type MotionSurfaceDefinition = MotionSurfaceDefinition",
  "type MotionSurfaceName = "disclosure" | "contextual" | "expand" | "invoke"",
  "type MotionSurfaceInput = MotionSurfaceInput",
  "describeSurface: (surface: MotionSurfaceInput) => string",
  "defineMotionSurface: <T extends MotionSurfaceDefinition>(definition: T) => T",
]
`;
